--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,8 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0; /* Remove any default margin */
 }
+
+.logo-img {
+  filter: drop-shadow(10px 10px 5px rgba(0, 0, 0, 0.5));
+  z-index: 999;
+}
